typescript/checker/tests/conformance/es6/templates/taggedTemplateUntypedTagCall01.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            4,
        ),
        hi: BytePos(
            7,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/templates/taggedTemplateUntypedTagCall01.ts:1:5
  |
1 | var tag: Function;
  |     ^^^

